# yu-tools

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: ci.yml
api/: README.md  pyproject.toml
api/src/app/: main.py
api/src/yta/: main.py
ui/: .env.example  README.md  TODO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
ui/src/app/: router.tsx
ui/src/app/router/: index.tsx
ui/src/features/system-status/: index.ts
ui/src/features/system-status/hooks/: useSystemStatus.ts
ui/src/features/system-status/model/: useSystemStatus.ts
ui/src/pages/home/ui/: HomePage.tsx
ui/src/shared/api/: system.ts
ui/src/shared/lib/: http.ts
ui/src/shared/lib/envs/: http.ts  index.ts
ui/src/shared/lib/http/: abort.ts  error.ts  index.ts  request.ts  response.ts  types.ts  url.ts
ui/src/shared/styles/: global.css
ui/src/shared/types/: system.ts
