[project]
name = "app"
version = "0.1.0"
description = "yu-tools-api"
readme = "README.md"
authors = [
    { name = "zhenyu", email = "huangzhenyu654@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
api = "app.main:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.8",
]

[tool.mypy]
python_version = "3.13"
files = ["src"]
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
